parser/src/test/resources/corpus/valid/43_over_period_using.ff
rule "Over Period Using" {
  let interest = principal * rate over period using actual/365
  let bare_over = principal over period
}
