parser/src/test/resources/corpus/invalid/23_accrue_missing_basis.ff
rule "Accrue Missing Basis" {
  accrue rate on using actual/365
}
